; ModuleID = '/home/carl/AnghaBench/linux/net/vmw_vsock/extr_hyperv_transport.c_hvs_notify_poll_in.c'
source_filename = "/home/carl/AnghaBench/linux/net/vmw_vsock/extr_hyperv_transport.c_hvs_notify_poll_in.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vsock_sock = type { %struct.hvsock* }
%struct.hvsock = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vsock_sock*, i64, i32*)* @hvs_notify_poll_in to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hvs_notify_poll_in(%struct.vsock_sock* %0, i64 %1, i32* %2) #0 {
  %4 = alloca %struct.vsock_sock*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.hvsock*, align 8
  store %struct.vsock_sock* %0, %struct.vsock_sock** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.vsock_sock*, %struct.vsock_sock** %4, align 8
  %9 = getelementptr inbounds %struct.vsock_sock, %struct.vsock_sock* %8, i32 0, i32 0
  %10 = load %struct.hvsock*, %struct.hvsock** %9, align 8
  store %struct.hvsock* %10, %struct.hvsock** %7, align 8
  %11 = load %struct.hvsock*, %struct.hvsock** %7, align 8
  %12 = getelementptr inbounds %struct.hvsock, %struct.hvsock* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @hvs_channel_readable(i32 %13)
  %15 = load i32*, i32** %6, align 8
  store i32 %14, i32* %15, align 4
  ret i32 0
}

declare dso_local i32 @hvs_channel_readable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
